--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-numpy~=1.26.2
-scipy~=1.11.3
-scikit-learn~=1.3.2
-pyDOE2~=1.3.0
-pandas~=2.1.3
-lime~=0.2.0.1
+ipython==8.15.0
+lime==0.2.0.1
+matplotlib==3.8.0
+numpy==1.26.2
+pandas==2.1.3
+pyDOE2==1.3.0
+pyDOE2==1.3.0
+scikit_learn==1.3.2
+scipy==1.11.3
